--- a/zkspringboot-demos/zkspringboot-demo-jar/src/main/resources/web/zul/mvvm-page2.zul
+++ b/zkspringboot-demos/zkspringboot-demo-jar/src/main/resources/web/zul/mvvm-page2.zul
@@ -1,5 +1,7 @@
 <zk>
-	<window title="Page 2" viewModel="@id('subVm') @init(pageModel)">
-		<label value="@load(subVm.data)"/>
+	<window title="Page 2" viewModel="@id('subVm') @init(pageModel)" zclass="card">
+		<div zclass="card-body">
+			<label value="@load(subVm.data)"/>
+		</div>
 	</window>
 </zk>
